2005-03-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/bin/add-html-footer.py (wiki_base): remove wiki link.

2004-04-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): add
	#'(markup) conversion

2004-02-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/chord-entry.scm: backport of chord entry fix.

2004-01-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.0.3 

	* Documentation/user/internals.itely (Engravers and performers):
	fix link.

2004-01-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/*.scm (grob-property-description): fix escape sequences for
	new GUILE.

	* lily/paper-outputter.cc (output_scope):  use scm_integer_p for
	dumping ints.

2004-01-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/mark-engraver.cc (process_music): fix typechecking bug.

2004-01-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.0.2
	
	* lily/mark-engraver.cc (process_music): backport of mark \default
	fix.

	* lily/tie-engraver.cc (acknowledge_grob): backport tie/accidental
	bugfix: make ties only for note heads with the same pitch.
	

2003-12-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/README.in (Suggested): Add gv, remove native windows
	gview (Volker Zell).

2003-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lyric-combine-music-iterator.cc
	(Lyric_combine_music_iterator): change init order, to prevent GC
	segfaults.

	* lily/context-specced-music-iterator.cc (construct_children): 
	only change  translator if found. This fixes a core dump problem.

2003-10-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/install-info-html.sh: Use Bash.

	* cygwin/mknetrel: Patch from Bert.

2003-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/lily-wins.py: Check whether to run ly2dvi or lilypond.

	* stepmake/stepmake/topdocs-targets.make (copy-to-top): Do not
	try to copy *png, index.html (Bertalan Fodor).
