@@ -65,7 +65,7 @@
 	    <li>
 <a class="title" href="../user/out-www/lilypond/index.html">User manual</a>
 (in <a class="title" href="../user/out-www/lilypond.pdf">PDF</a>, in
-<a class="title" href="../user/out-www/lilypond/lilypond.html">one big page</a>)
+<a class="title" href="../user/out-www/lilypond.html">one big page</a>)
 
      <br>(everything about LilyPond)
      
