@@ -107,7 +107,7 @@ package for LaTeX}.
 
 @item kpathsea, a library for searching (@TeX{}) files.
 
-@item @uref{http://www.xs4all.nl/~hanwen/mftrace/,mftrace} (1.0.17 or
+@item @uref{http://www.xs4all.nl/~hanwen/mftrace/,mftrace} (1.1.0 or
 newer),
 
   You will need to install some additional packages to get mftrace to
