@@ -3,4 +3,4 @@
 @unnumbered Full Grob interface list
 
 The automatic documentation failed to build.
-Visit @uref{http://www.cs.uu.nl/~hanwen/lilypond/Documentation,lilypond online}
+Visit @uref{http://@/www@/.lilypond@/.nl/@doc/@/v2.2,prebuilt LilyPond Documentation online}.
