@@ -62,10 +62,10 @@ STEPMAKE_GUILE(OPTIONAL)
 # perl for help2man.
 STEPMAKE_PERL(OPTIONAL)
 # mftrace for generating pfa's, pfb's
-STEPMAKE_PROGS(MFTRACE, mftrace, OPTIONAL, 1.0.17)
+STEPMAKE_PROGS(MFTRACE, mftrace, OPTIONAL, 1.1.0)
 
 # new makeinfo for multi-page website docs
-STEPMAKE_PROGS(MAKEINFO, makeinfo, OPTIONAL, 4.6)
+STEPMAKE_PROGS(MAKEINFO, makeinfo, OPTIONAL, 4.7)
 
 
 if test "$optimise_b" = yes; then
