@@ -181,18 +181,7 @@
     plus \lilypondpaperinterscorelinefill fill
 }}{}
 
-% Are we using PDFTeX?  If so, use pdf definitions.
-% MiKTeX checks \pdfoutput the wrong way, thus we use \csname.
-\lilypondifundefined{lilypondpostscript}
-  {
-    \lilypondifundefined{pdfoutput}
-      {\input lily-ps-defs }
-      {
-        \pdfoutput = 1
-        \input lily-pdf-defs %
-      }
-  }
-  {}
+\input lily-ps-defs 
 
 \newdimen\outputscale
 \newdimen\scoreshift
